--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,9 @@ fastapi==0.109.2
 httpx==0.26.0
 pytest==7.4.0
 uvicorn==0.25.0
+
+sqlmodel~=0.0.16
+jose~=1.0.0
+passlib~=1.7.4
+pydantic~=2.5.3
+SQLAlchemy~=2.0.28
