--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ python-jose = "3.3.0"
 bcrypt = "4.1.2"
 cryptography = "42.0.2"
 python-multipart = "^0.0.9"
+mangum = "^0.17.0"
 
 [[tool.poetry.packages]]
 include = "backend/*"
